<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvinput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#fefae0"
        android:padding="10dp"
        android:textSize="48sp"

        android:gravity="end|bottom"
        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_weight="1">

         <Button
             android:id="@+id/btn7"
             android:backgroundTint="#ffba08"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="@string/_7" />
         <Button
             android:id="@+id/btn8"
             android:backgroundTint="#ffba08"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:onClick="onDigit"
             android:text="@string/_8"/>
         <Button
             android:id="@+id/btn9"
             android:backgroundTint="#ffba08"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:onClick="onDigit"
             android:text="@string/_9"/>
         <Button
             android:id="@+id/btndivide"
             android:backgroundTint="#ffba08"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onoperator"
             android:text="@string/divide" />

     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:backgroundTint="#0582ca"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4" />
        <Button
            android:id="@+id/btn5"
            android:backgroundTint="#0582ca"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_5"/>
        <Button
            android:id="@+id/btn6"
            android:backgroundTint="#0582ca"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_6"/>
        <Button
            android:id="@+id/btnmultiply"
            android:backgroundTint="#0582ca"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onoperator"
            android:text="@string/multiply" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:backgroundTint="#f95738"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btn2"
            android:backgroundTint="#f95738"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_2"
           />
        <Button
            android:id="@+id/btn3"
            android:backgroundTint="#f95738"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_3"/>
        <Button
            android:id="@+id/btnsubtract"
            android:backgroundTint="#f95738"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onoperator"
            android:text="@string/subtract" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            android:backgroundTint="#aad576"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#aad576"
            android:onClick="ondecimal"

            android:text="@string/dot" />

        <Button
            android:id="@+id/btnclr"
            android:backgroundTint="#aad576"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onclear"
            android:text="@string/clr"/>
        <Button
            android:id="@+id/btnaddition"
            android:backgroundTint="#aad576"
            android:shape="rectangle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onoperator"
            android:text="@string/addition"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnequal"
            android:backgroundTint="#598392"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:onClick="onequal"

            android:text="@string/equal" />




    </LinearLayout>


</LinearLayout>